# siglip-grpo

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: train_rl.yaml
scripts/: eval_videos_modal.py  plot_publication.py  plot_training.py
src/siglip_grpo/: __init__.py  grpo.py  reward.py  rollout.py  train_rl.py  train_rl_modal.py  utils.py
src/vla_coach/: __init__.py  grpo.py  reward.py  rollout.py  temporal_embedding.py  train_rl.py  train_rl_modal.py  utils.py
tests/: test_pipeline.py
